[package]
name = "seqfold"
version = "0.8.0"
edition = "2021"
description = "Predict the minimum free energy structure of nucleic acids"
license = "MIT"
repository = "https://github.com/Lattice-Automation/seqfold"

[lib]
name = "seqfold"
crate-type = ["cdylib", "rlib"]

[features]
# Enables the PyO3 extension module. Off by default so `cargo test` exercises
# the pure-Rust engine without linking libpython.
python = ["dep:pyo3"]

[dependencies]
# abi3-py38: build a single stable-ABI wheel that works on CPython 3.8+,
# instead of a separate wheel per Python minor version.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"], optional = true }

[profile.release]
lto = true
codegen-units = 1
